--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -17,11 +17,19 @@
             android:textSize="16sp"
             android:fontFamily="sans-serif-medium"
             android:textColor="#B4BAC0"
+            android:id="@+id/tv_post_id"
+            tools:text="Post ID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:textSize="16sp"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="#B4BAC0"
+            android:layout_below="@id/tv_post_id"
             android:id="@+id/tv_id"
             tools:text="User ID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
         <TextView
             android:textSize="14sp"
             android:layout_below="@id/tv_id"
